book search enum value exception handled